--- a/src/index.html
+++ b/src/index.html
@@ -5,21 +5,11 @@
   <title>Aplicaciones MBI y AFGAR-F</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <header class="header">
-    <div class="header__logo-box">
-        <img src="./img/logo-white.png" alt="logo" class="header__logo">
-    </div>
-    <div class="header__text-box">
-        <h1 class="heading-primary">
-            <span class="heading-primary--main">Outdoors</span>
-            <span class="heading-primary--sub">is where life happens</span>
-        </h1>
-
-        <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
-    </div>
-</header>
+  <app-root></app-root>
+</div>
 </body>
 </html>
