--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
 
 <body>
   <app-root></app-root>
+  <footer class="footer">
+    <p class="mr-4">Desarrollador: German Andres Sanchez Motta</p>
+    <p>Teléfono: 301-478-83-71</p>
+  </footer>
 </body>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
