Download Excel funtion

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,27 @@
     <p>Teléfono: 301-478-83-71</p>
   </footer>
 </body>
+<!-- <script lang="javascript" src="dist/xlsx.full.min.js"></script> -->
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBAKAN8CyBV0NZ1yiFn_NLrmswcmxPXI2U",
+    authDomain: "psicologia-6f8bb.firebaseapp.com",
+    databaseURL: "https://psicologia-6f8bb.firebaseio.com",
+    projectId: "psicologia-6f8bb",
+    storageBucket: "psicologia-6f8bb.appspot.com",
+    messagingSenderId: "635032001573",
+    appId: "1:635032001573:web:f899d9252066f114ae33cc"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
