--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 <body>
   <app-root></app-root>
   <footer class="footer">
-    <p class="mr-md-4">Desarrollador: Germán Andres Sánchez Motta</p>
+    <p class="mr-md-4">Desarrollador: Germán Andrés Sánchez Motta</p>
     <p>Teléfono: 301-478-83-71</p>
   </footer>
 </body>
